<?xml version="1.0" encoding="utf-8"?>
<!--
    res/layout/main_score.xml
    Contains layout resources used by StateCapitalGameActivity
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_page"
        android:textColor="@color/navy"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingTop="32dp"
        />

    <ImageView
        android:id="@+id/uncle_sam"
        android:layout_width="339dp"
        android:layout_height="212dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:contentDescription="@string/content"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:id="@+id/header_background">

        <TextView
            android:id="@+id/tv_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:textColor="@color/navy"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tv_header_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/navy"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="center"

            />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/score_background"
        tools:context="com.cd211d.statesandcapitalswithunclesam.app.ScoreActivity">

        <TextView
            android:id="@+id/tv_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/tv_player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/name_score_background"
        tools:context="com.cd211das.guessstatesandcapitals.guessstatesandcapitals">

        <TextView
            android:id="@+id/tv_congrats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navy"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="3"
            android:singleLine="false"
            android:paddingTop="16dp"
            />

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_blue"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:text="@string/play_again"
            android:textStyle="bold"
            android:onClick="doClick"
            />
        <Button
            android:id="@+id/stop_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_red"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:text="@string/stop"
            android:textStyle="bold"
            android:onClick="doClick"
            />
    </LinearLayout>
</LinearLayout>

